# mowm

./: CMakeLists.txt  LICENSE
src/: .#event_handler.cpp  config.cpp  config.h  config.hpp  event_handler.cpp  event_handler.hpp  globals.cpp  globals.hpp  layout_manager.cpp  layout_manager.h  main.cpp  monitor_manager.cpp  monitor_manager.h  monitor_manager.hpp  workspace_manager.cpp  workspace_manager.hpp
src/layouts/: layouts.cpp  layouts.hpp  master_stack.cpp  master_stack.hpp  monacle.cpp  monacle.hpp
